// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Alert (snapshot) renders default variant 1`] = `
<div
  class="relative w-full rounded-lg border p-4 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground [&>svg~*]:pl-7 bg-background text-foreground"
  role="alert"
>
  <div
    class="text-sm [&_p]:leading-relaxed"
  >
    Default alert body
  </div>
</div>
`;

exports[`Alert (snapshot) renders destructive variant 1`] = `
<div
  class="relative w-full rounded-lg border p-4 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg~*]:pl-7 border-destructive/50 text-destructive dark:border-destructive [&>svg]:text-destructive"
  role="alert"
>
  <div
    class="text-sm [&_p]:leading-relaxed"
  >
    Destructive alert body
  </div>
</div>
`;

exports[`Alert (snapshot) renders with title and description 1`] = `
<div
  class="relative w-full rounded-lg border p-4 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground [&>svg~*]:pl-7 bg-background text-foreground"
  role="alert"
>
  <h5
    class="mb-1 font-medium leading-none tracking-tight"
  >
    Heads up
  </h5>
  <div
    class="text-sm [&_p]:leading-relaxed"
  >
    Body text
  </div>
</div>
`;
